--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
 
             // Process each row after the header
             for (let i = 1; i < rows.length; i++) {
-                const values = rows[i].split(',');
+                const rowText = rows[i].trim();
+
+                // Skip empty rows or rows that are repeated headers
+                if (rowText === '' || rowText.split(',')[0].trim() === headers[0]) {
+                    continue;
+                }
+                
+                const values = rowText[i].split(',');
                 const brand = values[brandIndex];
 
                 if (!brand) continue; // Skip rows without a brand
