--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     continue;
                 }
                 
-                const values = rowText[i].split(',');
+                const values = rowText.split(',');
                 const brand = values[brandIndex];
 
                 if (!brand) continue; // Skip rows without a brand
