--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <img 
                             src="${imageUrl}" 
                             alt="${product.name}" 
-                            class="w-full h-48 object-cover"
+                            class="w-full h-48 object-contain"
                             onError="this.onerror=null;this.src='https://placehold.co/600x400/CCCCCC/FFFFFF?text=Image+Not+Found';"
                         />
                         <div class="p-4 flex flex-col flex-grow">
